--- a/Ecom/GoCart/Base.lproj/Main.storyboard
+++ b/Ecom/GoCart/Base.lproj/Main.storyboard
@@ -132,7 +132,7 @@
                                             <constraint firstAttribute="height" constant="737" id="Qbw-J0-5rX"/>
                                         </constraints>
                                         <prototypes>
-                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="CartDispalyCell" rowHeight="208" id="JNt-kv-eLM" customClass="CartDispalyCell" customModule="GoCart" customModuleProvider="target">
+                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="CartDisplayCell" rowHeight="208" id="JNt-kv-eLM" customClass="CartDisplayCell" customModule="GoCart" customModuleProvider="target">
                                                 <rect key="frame" x="0.0" y="50" width="393" height="208"/>
                                                 <autoresizingMask key="autoresizingMask"/>
                                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="JNt-kv-eLM" id="vmL-c7-OaL">
@@ -264,6 +264,7 @@
                                     </button>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="aze-SY-Gc9">
                                         <rect key="frame" x="43" y="179" width="306" height="295"/>
+                                        <color key="backgroundColor" red="0.83741801979999997" green="0.83743780850000005" blue="0.83742713930000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="306" id="pXa-pB-4Tc"/>
                                             <constraint firstAttribute="height" constant="295" id="xRt-id-z0y"/>
